# Mini-Flashcards

./: .gitignore  GEMINI.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: flashcards.py  learning.py  topics.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/exceptions/: handlers.py
backend/app/models/: flashcard.py  topic.py
backend/app/repositories/: flashcard_repo.py  topic_repo.py
backend/app/schemas/: flashcard.py  topic.py
backend/app/services/: flashcard_service.py  learning_service.py
backend/docs/: project_structure.md
backend/migrations/: env.py
backend/migrations/versions/: 2fb3a29a451f_add_topics_table_and_update_flashcards.py  c52fc3d85fcb_initial_flashcards_table.py
docs/: api-design-document.md  backend-document.md  frontend-document.md  project-requirements-document.md
docs/features/: topic-vocabulary.md
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/quiz/: page.tsx
frontend/src/app/topics/: page.tsx
frontend/src/app/writing/: page.tsx
frontend/src/components/shared/: BottomNav.tsx  Flashcard.tsx  TopNav.tsx
frontend/src/components/ui/: SearchableCombobox.tsx  TopicPicker.tsx
frontend/src/lib/: api-client.ts
frontend/src/services/: flashcard-service.ts  learning-service.ts  stats-service.ts  topic-service.ts
frontend/src/types/: index.ts
tasks/: request.md  todo.md
